--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.7",
     "autoprefixer": "^10.4.14",
+    "flowbite": "^1.6.5",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
     "vue": "^3.3.4",
